add FindLLVM, and tage 4/9's folder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.6.3)
 
 PROJECT( "AS_TO_CPP" )
 
+SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin CACHE PATH "Default executable path" FORCE)
+
 SET(CMAKE_MODULE_PATH
     "${CMAKE_SOURCE_DIR}/CMake"
     "${CMAKE_SOURCE_DIR}/CMake/Packages"
@@ -15,6 +17,7 @@ make_directory( ${CMAKE_SOURCE_DIR}/bin/ )
 
 FIND_PACKAGE(Thrift REQUIRED) 
 FIND_PACKAGE(Boost REQUIRED thread date_time program_options unit_test_framework filesystem regex system serialization)
+FIND_PACKAGE(LLVM REQUIRED) 
 
 
 FILE( GLOB ASC_JAVA_SRC ${CMAKE_SOURCE_DIR}/project/asc/src/java/*/*/*.java )
@@ -30,3 +33,4 @@ ADD_CUSTOM_TARGET(asc.jar ALL echo
     )
 
 ADD_SUBDIRECTORY( ${CMAKE_SOURCE_DIR}/project/pn-translator/ )
+
