--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,10 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.6.3)
 
 PROJECT( "AS_TO_CPP" )
 
+SET( ASC java -jar ${CMAKE_SOURCE_DIR}/lib/asc.jar )
+SET( PNC "${EXECUTABLE_OUTPUT_PATH}/pnc" )
+SET( PNLD "${EXECUTABLE_OUTPUT_PATH}/pn-ld" )
+
 SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin CACHE PATH "Default executable path" FORCE)
 
 SET(CMAKE_MODULE_PATH
@@ -38,5 +42,3 @@ SET(ENABLE_COMPLEX_TEST FALSE CACHE BOOL "Enable complex test")
 if( ENABLE_COMPLEX_TEST )
     ADD_SUBDIRECTORY( ${CMAKE_SOURCE_DIR}/project/complex-test)
 endif()
-
-
