bugfix for first time initiate

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,11 +3,12 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8.3)
 
 PROJECT( "AS_TO_CPP" )
 
-SET( ASC java -jar ${CMAKE_SOURCE_DIR}/lib/asc.jar )
-SET( PNC "${EXECUTABLE_OUTPUT_PATH}/pnc" )
-SET( PNLD "${EXECUTABLE_OUTPUT_PATH}/pn-ld" )
+SET(EXECUTABLE_OUTPUT_PATH  ${CMAKE_SOURCE_DIR}/bin CACHE PATH "Default executable path" FORCE)
+SET(LIBRARY_OUTPUT_PATH     ${CMAKE_SOURCE_DIR}/lib CACHE PATH "Default library path" FORCE)
 
-SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin CACHE PATH "Default executable path" FORCE)
+SET( ASC java -jar ${LIBRARY_OUTPUT_PATH}/asc.jar )
+SET( PNC ${EXECUTABLE_OUTPUT_PATH}/pnc )
+SET( PNLD ${EXECUTABLE_OUTPUT_PATH}/pn-ld ) 
 
 SET(CMAKE_MODULE_PATH
     "${CMAKE_SOURCE_DIR}/CMake"
